[package]
name = "pc-common"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sha2 = "0.9.8"
aes = { version = "0.7.5", features = ["compact"] }
block-modes = "0.8.1"
enum_kind = "0.2.1"
anyhow = "1.0"
thiserror = "1.0"
hex-literal = "0.3.3"
wasm-bindgen = { version = "0.2.76", optional = true}
wasm-bindgen-futures = { version = "0.4.26", optional = true }
reqwest = { version = "0.11.4", optional = true }
chardetng = "0.1.14"
encoding_rs = "0.8.28"
miniz_oxide = "0.4.4"
regex = "1.5.4"
base64 = "0.13.0"
js-sys = { version = "0.3.55", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }

[features]
default = ["frontend"]
frontend = ["wasm-bindgen", "wasm-bindgen-futures", "reqwest", "js-sys", "console_error_panic_hook"]